# packages/api-client/openapi.json
@@ -22,8 +22,8 @@
               }
             }
           },
-          "401": {
-            "description": "Unauthorized"
+          "403": {
+            "description": "Forbidden"
           }
         },
         "security": [
@@ -341,6 +341,58 @@
         ]
       }
     },
+    "/api/endpoints/{id}/test": {
+      "post": {
+        "tags": [],
+        "operationId": "test_send",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Endpoint ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/TestSendRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Test message sent successfully",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "404": {
+            "description": "Endpoint not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AppErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "basic_auth": []
+          }
+        ]
+      }
+    },
     "/api/events": {
       "get": {
         "tags": [],
@@ -469,6 +521,18 @@
           "name"
         ],
         "properties": {
+          "banner": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "footer": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "name": {
             "type": "string"
           }
@@ -531,9 +595,21 @@
           "created_at"
         ],
         "properties": {
+          "banner": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "created_at": {
             "type": "integer",
             "format": "int64"
+          },
+          "footer": {
+            "type": [
+              "string",
+              "null"
+            ]
           },
           "id": {
             "type": "string"
@@ -612,6 +688,17 @@
           }
         }
       },
+      "TestSendRequest": {
+        "type": "object",
+        "required": [
+          "markdown"
+        ],
+        "properties": {
+          "markdown": {
+            "type": "string"
+          }
+        }
+      },
       "UemEvent": {
         "type": "object",
         "required": [
@@ -649,6 +736,18 @@
       "UpdateEndpointRequest": {
         "type": "object",
         "properties": {
+          "banner": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "footer": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "name": {
             "type": [
               "string",
